# uruDendro

./: .gitattributes  .gitignore  LICENSE  MANIFEST.in  README.md  algoritmos.html  contacto.html  datasets.html  environment.yml  index.html  metric_influence_area.py  pixel_millimeter.txt  proyectos.html  publicaciones.html  pyproject.toml  requirements.txt  scale_bar.py  setup.py
css/: style.css
data/: 1W23S20.json  1W23S20_lw_INBD.json  1W23S20_lw_INBDresized.json  1W23S20resized.json  C11C.json  C11C_lw_CS-TRD.json  C11C_lw_INBD.json  C13C.json  C13C_lw_CS-TRD.json  C13C_lw_INBD.json  C14C.json  C14C_lw_CS-TRD.json  C14C_lw_INBD.json  C17C.json  C17C_lw_CS-TRD.json  C17C_lw_INBD.json  F02b.json  F03d.json  dt_F02b.json  dt_F03d.json
lib/: chain.py  sampling.py
scripts/: dataset.py
urudendro/: __init__.py  dataset.py  drawing.py  image.py  io.py  labelme.py  metric_influence_area.py  remove_salient_object.py
urudendro/lib/: sampling.py
