[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "urudendro"
version = "0.5.0"
description = "UruDendro - A dataset and tools for cross-section tree ring analysis"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "AGPL-3.0"}
authors = [
    {name = "Henry Marichal", email = "hmarichal93@gmail.com"},
]
maintainers = [
    {name = "Henry Marichal", email = "hmarichal93@gmail.com"},
]
dynamic = ["dependencies"]
keywords = [
    "dendrochronology",
    "tree-rings",
    "image-processing",
    "computer-vision",
    "deep-learning",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Image Recognition",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

[project.urls]
Homepage = "https://iie.fing.edu.uy/proyectos/madera/"
Documentation = "https://iie.fing.edu.uy/proyectos/madera/"
Repository = "https://github.com/hmarichal93/uruDendro"
"Bug Tracker" = "https://github.com/hmarichal93/uruDendro/issues"
Paper = "https://rdcu.be/euo3F"

[tool.setuptools]
packages = ["urudendro"]
include-package-data = true

[tool.setuptools.package-data]
urudendro = ["u2net.pth"]
